--- a/create_charts/my-first-chart/templates/deployment.yaml
+++ b/create_charts/my-first-chart/templates/deployment.yaml
@@ -1,5 +1,6 @@
 apiVersion: apps/v1
 kind: Deployment
+  {{"Hi team, we are leaning - "}}, {{"HELM"}}
 metadata:
   name: {{ include "my-first-chart.fullname" . }}
   labels:
