--- a/create_charts/my-first-chart/templates/deployment.yaml
+++ b/create_charts/my-first-chart/templates/deployment.yaml
@@ -1,12 +1,12 @@
 apiVersion: apps/v1
 kind: Deployment
-  {{- .Values.customblock.author.name}}
-  {{- .Values.customblock.author.address}}
+  {{.Values.customblock.author.name}}
+  {{.Values.customblock.author.address}}
 
-  {{- "Values from Chart"}}
-  {{- .Chart.AppVersion}}
-  {{- .Chart.Keywords}}
-  {{- .Chart.Maintainers}}
+  {{"Values from Chart"}}
+  {{.Chart.AppVersion}}
+  {{.Chart.Keywords}}
+  {{.Chart.Maintainers}}
 
 metadata:
   name: {{ include "my-first-chart.fullname" . }}
