--- a/create_charts/my-first-chart/templates/deployment.yaml
+++ b/create_charts/my-first-chart/templates/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
   {{.Values.Customblock.Author.Address}}
-  {{.Values.Customblock.Author.Addresss | default "Hi, I am not Null"}}
+  {{.Values.Customblock.Author.Email | default "Hi, I am not Null"}}
   {{.Values.Customblock.Author.Address | default "Hi, I am not Null"}}
   {{.Values.Customblock.Author.Address | default "Hi, I am not Null" | upper}}
   {{.Values.Customblock.Author.Address | default "Hi, I am not Null" | upper | quote}}
