--- a/create_charts/my-first-chart/templates/deployment.yaml
+++ b/create_charts/my-first-chart/templates/deployment.yaml
@@ -1,10 +1,10 @@
 apiVersion: apps/v1
 kind: Deployment
-  {{.Values.Customblock.Author.Address}}
-  {{.Values.Customblock.Author.Email | default "Hi, I am not Null"}}
-  {{.Values.Customblock.Author.Address | default "Hi, I am not Null"}}
-  {{.Values.Customblock.Author.Address | default "Hi, I am not Null" | upper}}
-  {{.Values.Customblock.Author.Address | default "Hi, I am not Null" | upper | quote}}
+  {{.Values.customblock.author.address}}
+  {{.Values.customblock.author.email | default "Hi, I am not Null"}}
+  {{.Values.customblock.author.address | default "Hi, I am not Null"}}
+  {{.Values.customblock.author.address | default "Hi, I am not Null" | upper}}
+  {{.Values.customblock.author.address | default "Hi, I am not Null" | upper | quote}}
 
 metadata:
   name: {{ include "my-first-chart.fullname" . }}
