--- a/create_charts/my-first-chart/templates/deployment.yaml
+++ b/create_charts/my-first-chart/templates/deployment.yaml
@@ -1,11 +1,8 @@
 apiVersion: apps/v1
 kind: Deployment
-  {{.Values.customblock.author.address}}
-  {{.Values.customblock.author.email | default "Hi, I am not Null" | nindent 2}}
-  {{.Values.customblock.author.address | default "Hi, I am not Null" | nindent 4}}
-  {{.Values.customblock.author.address | default "Hi, I am not Null" | upper | nindent 6}}
-  {{.Values.customblock.author.address | default "Hi, I am not Null" | upper | quote | nindent 8}}
-
+{{- if .Values.customblock.author.name }}
+{{"Custom Value is present" | nindent 4}}
+{{- end }}
 metadata:
   name: {{ include "my-first-chart.fullname" . }}
   labels:
