--- a/create_charts/my-first-chart/templates/deployment.yaml
+++ b/create_charts/my-first-chart/templates/deployment.yaml
@@ -2,6 +2,8 @@ apiVersion: apps/v1
 kind: Deployment
 {{- if .Values.customblock.author.name }}
 {{"Custom Value is present" | nindent 4}}
+{{- else}}
+{{"Custom value boolean is false" | nindent 4}}
 {{- end }}
 metadata:
   name: {{ include "my-first-chart.fullname" . }}
