--- a/create_charts/my-first-chart/values.yaml
+++ b/create_charts/my-first-chart/values.yaml
@@ -3,8 +3,8 @@
 # Declare variables to be passed into your templates.
 customblock:
   author:
-    name: true
-    
+    name: false
+
 replicaCount: 3
 
 image:
