--- a/create_charts/my-first-chart/templates/deployment.yaml
+++ b/create_charts/my-first-chart/templates/deployment.yaml
@@ -3,6 +3,8 @@ kind: Deployment
 {{- with .Values.customblock.author.name}}
 author:
 {{- toYaml . | nindent 4 }}
+{{- else}}
+{{"Hi, I am without with Block." | nindent 4}}
 {{- end }}
 
 metadata:
