--- a/create_charts/my-first-chart/values.yaml
+++ b/create_charts/my-first-chart/values.yaml
@@ -3,12 +3,7 @@
 # Declare variables to be passed into your templates.
 customblock:
   author:
-    name: 
-      - "Edward"
-      - "Peter"
-      - "Mark"
-      - "Juan"
-      - "Camela"
+    name: {}
 
 replicaCount: 3
 
