--- a/create_charts/my-first-chart/templates/deployment.yaml
+++ b/create_charts/my-first-chart/templates/deployment.yaml
@@ -1,11 +1,12 @@
 apiVersion: apps/v1
 kind: Deployment
-{{- with .Values.customblock.author.name}}
-author:
-{{- toYaml . | nindent 4 }}
-{{- else}}
-{{"Hi, I am without with Block." | nindent 4}}
-{{- end }}
+{{ $myVar := true }}
+{{- if $myVar }}
+{{"Hi, I am with Varaible True"}}
+{{- else }}
+{{"Hi, I am with varaible False"}}
+{{- end}}
+
 
 metadata:
   name: {{ include "my-first-chart.fullname" . }}
