--- a/create_charts/my-first-chart/templates/deployment.yaml
+++ b/create_charts/my-first-chart/templates/deployment.yaml
@@ -1,7 +1,6 @@
 apiVersion: apps/v1
 kind: Deployment
 {{ $myVar := true }}
-
 {{- if $myVar }}
 {{"Hi, I am with Varaible True" | nindent 4 }}
 {{- else }}
@@ -26,6 +25,11 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
+        {{- include "my-first-chart.selectorLabels" . | nindent 8 }}
+        {{- include "my-first-chart.selectorLabels" . | nindent 8 }}
+        {{- include "my-first-chart.selectorLabels" . | nindent 8 }}
+        {{- include "my-first-chart.selectorLabels" . | nindent 8 }}
+        {{- include "my-first-chart.selectorLabels" . | nindent 8 }}
         {{- include "my-first-chart.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
