--- a/create_charts/my-first-chart/templates/deployment.yaml
+++ b/create_charts/my-first-chart/templates/deployment.yaml
@@ -1,10 +1,23 @@
 apiVersion: apps/v1
 kind: Deployment
-{{ $myVar := .Values.autoscaling.enabled }}
-{{- if $myVar }}
-{{"Hi, I am with Varaible True" | nindent 4 }}
-{{- else }}
-{{"Hi, I am with varaible False" | nindent 4 }}
+# {{ $myVar := true }}
+# {{- if $myVar }}
+# {{"Hi, I am with Varaible True" | nindent 4 }}
+# {{- else }}
+# {{"Hi, I am with varaible False" | | nindent 4 }}
+# {{- end}}
+
+
+{{- with .Values.customblock.author.name}}
+author:
+{{- toYaml . | nindent 4 }}
+# {{- else}}
+# {{"Hi, I am without with Block." | nindent 4}}
+{{- end }}
+
+{{- range .Values.customblock.author.name}}
+author:
+  - {{ . }}
 {{- end }}
 
 metadata:
@@ -25,11 +38,6 @@ spec:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       labels:
-        {{- include "my-first-chart.selectorLabels" . | nindent 8 }}
-        {{- include "my-first-chart.selectorLabels" . | nindent 8 }}
-        {{- include "my-first-chart.selectorLabels" . | nindent 8 }}
-        {{- include "my-first-chart.selectorLabels" . | nindent 8 }}
-        {{- include "my-first-chart.selectorLabels" . | nindent 8 }}
         {{- include "my-first-chart.selectorLabels" . | nindent 8 }}
     spec:
       {{- with .Values.imagePullSecrets }}
