--- a/create_charts/my-first-chart/templates/deployment.yaml
+++ b/create_charts/my-first-chart/templates/deployment.yaml
@@ -6,9 +6,14 @@ author:
 {{- toYaml . | nindent 4 }}
 {{- end }}
 
-{{- range .Values.customblock.author.name}}
 author:
+{{- range .Values.customblock.author.name}}
   - {{ . }}
+{{- end }}
+
+images:
+{{- range $key,$value .Values.image}}
+  {{$key}}: {{$value}}
 {{- end }}
 
 metadata:
