--- a/create_charts/my-first-chart/templates/deployment.yaml
+++ b/create_charts/my-first-chart/templates/deployment.yaml
@@ -13,7 +13,7 @@ author:
 
 images:
 {{- range $key,$value := .Values.image}}
-  {{$key}}: {{$value}}
+  {{$key}}: {{$value | quote}}
 {{- end }}
 
 metadata:
