--- a/create_charts/my-first-chart/Chart.yaml
+++ b/create_charts/my-first-chart/Chart.yaml
@@ -40,3 +40,4 @@ dependencies:
   - name : rabbitmq
     version : "11.2.2"
     repository : "https://charts.bitnami.com/bitnami"
+    condition : rabbitmq.enabled
