--- a/create_charts/my-first-chart/values.yaml
+++ b/create_charts/my-first-chart/values.yaml
@@ -98,7 +98,7 @@ mysql :
     primary :
       service : 
         type : NodePort
-        nodePorts:
+        ports:
           - nodePort : 31025 
 
 rabbitmq :
