--- a/create_charts/my-first-chart/templates/deployment.yaml
+++ b/create_charts/my-first-chart/templates/deployment.yaml
@@ -1,6 +1,6 @@
 apiVersion: apps/v1
 kind: Deployment
-  {{ .Values.mysql_image }}
+  {{ .Values.mysql_image.repository }}
 
 metadata:
   name: {{ include "my-first-chart.fullname" . }}
